# llm-lock

./: .gitignore  README.md  llm-lock.code-workspace  pyproject.toml
agentdojo/: defense_utils.py  embedding_defense.py  hybrid_defense.py  llm_defense.py  main.py  multiclass_defense.py  transformer_defense.py
data/agentdojo/data-delimiter/: README.md  results.json
data/agentdojo/embedding/: README.md  results.json
data/agentdojo/hybrid/protectai-deberta-v3-base-prompt-injection-v2/: README.md  results.json
data/agentdojo/hybrid/qualifire-prompt-injection-jailbreak-sentinel-v2/: README.md  results.json
data/agentdojo/llm/: README.md  results.json
data/agentdojo/multiclass/: README.md  results.json
data/agentdojo/none/: README.md  results.json
data/agentdojo/transformer/protectai-deberta-v3-base-prompt-injection-v2/: README.md  results.json
data/agentdojo/transformer/qualifire-prompt-injection-jailbreak-sentinel-v2/: README.md  results.json
data/notebooks/classifier-embedding/ahsanayub-malicious-prompts/sentence-transformers-all-MiniLM-L6-v2/: results.json
data/notebooks/classifier-multiclass/sentence-transformers-all-MiniLM-L6-v2/: results.json
data/synthetic-dataset/: README.md
data/synthetic-dataset/raw/ideas/: preliminary-ideas.json
notebooks/: classifier-embedding.ipynb  classifier-hybrid.ipynb  classifier-multiclass.ipynb  classifier-transformer.ipynb  parameter-search-embedding.ipynb  parameter-search-hybrid.ipynb  prepare-datasets.ipynb  results-analysis.ipynb
scripts/: run.sh  start-ollama.sh  stop-ollama.sh
(+70002 files in other folders)
