[project]
name = "llm-lock"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agentdojo[transformers]",
  "imblearn>=0.0",
  "jsonref>=1.1.0",
  "jsonschema>=4.25.1",
  "langchain-huggingface>=1.1.0",
  "matplotlib>=3.10.6",
  "numpy>=2.2.6",
  "openai>=2.8.0",
  "polars>=1.33.1",
  "python-dotenv>=1.1.1",
  "scikit-learn>=1.7.2",
  "sentence-transformers>=5.1.0",
  "torch>=2.8.0",
  "tqdm>=4.67.1",
  "transformers>=4.56.2",
]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
agentdojo = { git = "https://github.com/Wakeful-Cloud/agentdojo.git", rev = "6ebf27e7648d8f866e8ee8c850e0c3a78b9d203f" }

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
